--- a/templates/registration/main.html
+++ b/templates/registration/main.html
@@ -2,9 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Airline Manager</title>
+
+    <style>
+        body {
+            background-image: {% load static %} url('{% static "registration/media/main_background.jpg" %}');
+            background-size : cover;
+            background-repeat: no-repeat;
+            font-family: Arial, sans-serif;
+        }
+        .main{
+            margin-left: 15%;
+            margin-right: 15%;
+            background-color: rgba(255, 255, 255, 0.4);
+        }
+        .main h1{
+            font-size: 50px;
+            color: navy;
+        }
+        .main b{
+            font-size: 20px;
+            color: white;
+        }
+        .main label{
+            color: white;
+        }
+    </style>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-
+    <div class="main">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <center>
+                    <br><br>
+                    <h1>Airline Manager</h1>
+                    <br>
+                    <b>become airline CEO and make your own aviation empire</b>
+                    <br><br><br><br><br><br>
+                    <label>Play now</label><br>
+                    <a href="/signup" class="btn btn-success btn-lg btn-block">Sign up</a></b>
+                    <br><br><br>
+                    <label>Already have an Account?</label>
+                    <a href="/login" class="btn btn-primary btn-lg btn-block">Login</a></b>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </center>
+            </div>
+        </div>
+    </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
