added login page, email verification and password reset

--- a/templates/registration/main.html
+++ b/templates/registration/main.html
@@ -12,6 +12,7 @@
         <br><br><br>
         <label>Already have an Account?</label>
         <a href="/login" class="btn btn-primary btn-lg btn-block">Login</a></b>
+        <a href="/password_reset">Forgot password?</a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </center>
 {% endblock %}
