--- a/templates/registration/account_created.html
+++ b/templates/registration/account_created.html
@@ -1,12 +1,11 @@
-
 {% extends 'registration/base.html' %}
 
 {% block content %}
     <center>
         <br><br><br>
-        <b>Account has been created successfully</b>
+        <b>We've send verification link to your email adress, open it to complete registration process</b>
         <br><br><br>
-        <a href="/login" class="btn btn-primary btn-lg btn-block">Login</a></b>
+        <a href="/" class="btn btn-primary btn-lg btn-block">Return home</a></b>
         <br><br><br>
     </center>
 {% endblock %}
