--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'registration/base.html' %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
+{% block content %}
+    <center>
+        <br><br>
+        <h1>Login</h1>
+        <br><br>
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-success">Log In</button>
+        </form>
+        <br><br><br><br><br><br>
+    </center>
+{% endblock %}
