added flights page

--- a/templates/main/aircraft_market.html
+++ b/templates/main/aircraft_market.html
@@ -22,14 +22,14 @@
                     <td><label>70</label></td>
                     <td><label>2000</label></td>
                     <td><label>200000</label></td>
-                    <td><label><a href="" class="btn btn-success">buy</a> </label></td>
+                    <td><label><a href="buy/98" class="btn btn-success">buy</a> </label></td>
                 </tr>
                 <tr>
                     <td><label>Bombardier CRJ-700</label></td>
                     <td><label>80</label></td>
                     <td><label>3500</label></td>
                     <td><label>300000</label></td>
-                    <td><label><a href="" class="btn btn-success">buy</a> </label></td>
+                    <td><label><a href="buy/9700" class="btn btn-success">buy</a> </label></td>
                 </tr>
                 <tr>
                     <td><label>Boeing 737-800</label></td>
@@ -37,6 +37,13 @@
                     <td><label>5800</label></td>
                     <td><label>1100000</label></td>
                     <td><label><a href="buy/67378" class="btn btn-success">buy</a> </label></td>
+                </tr>
+                <tr>
+                    <td><label>Airbus A350-900</label></td>
+                    <td><label>350</label></td>
+                    <td><label>17000</label></td>
+                    <td><label>30000000</label></td>
+                    <td><label><a href="buy/43509" class="btn btn-success">buy</a> </label></td>
                 </tr>
             </tbody>
         </table>
