--- a/templates/main/buy_aircraft.html
+++ b/templates/main/buy_aircraft.html
@@ -1,5 +1,17 @@
 {% extends 'main/home.html' %}
-
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 {% block content2 %}
-
+    <center>
+        <br><br>
+        <b>Enter registration for your new aircraft <br>
+            {{ model }}</b>
+        <br><br>
+        <form method="post">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <button type="submit" class="btn btn-success">Confirm</button>
+        </form>
+        <br><br><br><br><br><br>
+    </center>
 {% endblock %}
