--- a/templates/main/create_flight_for_aircraft.html
+++ b/templates/main/create_flight_for_aircraft.html
@@ -5,6 +5,7 @@
     <center>
         <br><br>
         <h1>Create flight</h1>
+        <b>for {{ aircraft.registration }}</b>
         <br><br>
         <form method="post">
             {% csrf_token %}
