--- a/templates/main/fleet.html
+++ b/templates/main/fleet.html
@@ -16,8 +16,9 @@
                     <table class="table table-hover table-bordered">
                       <thead>
                         <tr>
-                            <label><th scope="col">model</th>
-                            <th scope="col">registration</th></label>
+                            <label><th scope="col">Model</th>
+                            <th scope="col">Registration</th></label>
+                            <th scope="col">Flight</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -25,6 +26,11 @@
                           <tr>
                               <td><label>{{ plane.type }}</label></td>
                               <td><label>{{ plane.registration }}</label></td>
+                              {% if plane.flight %}
+                                    <td><label>{{ plane.flight.departure_airport.code }} - {{ plane.flight.arrival_airport.code }}</label></td>
+                              {% else %}
+                                    <td><a href="createflight/{{ plane.plane_id }}" class="btn btn-success">Create flight for aircraft</a></td>
+                              {% endif %}
                           </tr>
                       {% endfor %}
                       </tbody>
