--- a/templates/main/aircraft_market.html
+++ b/templates/main/aircraft_market.html
@@ -32,11 +32,25 @@
                     <td><label><a href="buy/9700" class="btn btn-success">buy</a> </label></td>
                 </tr>
                 <tr>
+                    <td><label>Airbus A318</label></td>
+                    <td><label>130</label></td>
+                    <td><label>5000</label></td>
+                    <td><label>700000</label></td>
+                    <td><label><a href="buy/4318" class="btn btn-success">buy</a> </label></td>
+                </tr>
+                <tr>
                     <td><label>Boeing 737-800</label></td>
                     <td><label>170</label></td>
                     <td><label>5800</label></td>
                     <td><label>1100000</label></td>
                     <td><label><a href="buy/67378" class="btn btn-success">buy</a> </label></td>
+                </tr>
+                <tr>
+                    <td><label>Airbus A320neo</label></td>
+                    <td><label>190</label></td>
+                    <td><label>5500</label></td>
+                    <td><label>1200000</label></td>
+                    <td><label><a href="buy/4320" class="btn btn-success">buy</a> </label></td>
                 </tr>
                 <tr>
                     <td><label>Airbus A350-900</label></td>
@@ -45,9 +59,16 @@
                     <td><label>30000000</label></td>
                     <td><label><a href="buy/43509" class="btn btn-success">buy</a> </label></td>
                 </tr>
+                <tr>
+                    <td><label>Boeing 777-300ER</label></td>
+                    <td><label>520</label></td>
+                    <td><label>17500</label></td>
+                    <td><label>40000000</label></td>
+                    <td><label><a href="buy/67773" class="btn btn-success">buy</a> </label></td>
+                </tr>
             </tbody>
         </table>
-        <br><br>
+        <br><br><br><br><br><br><br><br><br><br>
     </ul>
     </center>
 {% endblock %}
