--- a/templates/main/delete_flight.html
+++ b/templates/main/delete_flight.html
@@ -4,12 +4,13 @@
 {% block content2 %}
     <center>
         <br><br>
-        <h1>Create flight</h1>
+        <b>Are you sure you want to delete this flight?</b><br>
+        <label>{{ flight.departure_airport }} -> {{ flight.arrival_airport }}</label>
         <br><br>
         <form method="post">
             {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-success">Create</button>
+            {{ form | crispy }}
+            <button type="submit" class="btn btn-success">Confirm</button>
         </form>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </center>
