--- a/templates/main/create_hub.html
+++ b/templates/main/create_hub.html
@@ -10,6 +10,12 @@
             {{ formhub|crispy }}
             <button type="submit" class="btn btn-success">Select</button>
         </form>
+        {% if not_enough_money_popup %}
+            <script>
+                window.alert("You don't have enough money for this transaction")
+            </script>
+        {% endif %}
+        <a href="../main/hubs" class="btn btn-danger">Return</a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </center>
 {% endblock %}
